docs: Correct website page title sizing on smaller screens (#204)

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -53,7 +53,15 @@ h1, h2, h3 {
 
 header h1 {
     text-align: center;
-    font-size: 3em;
+    font-size: 2.2em;
+}
+
+@media (min-width:768px) {
+
+    header h1 {
+        font-size: 3em;
+    }
+
 }
 
 p {
